--- a/_data/code-enforcement.yml
+++ b/_data/code-enforcement.yml
@@ -1,12 +1,12 @@
 - group-title: Section I - Customer Service
-  group-description:
+  group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Office's target timeframes
   charts:
-    - title: Timeliness of Completion of Customer Service Requests
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+    - title: ALL CUSTOMER SERVICE REQUESTS (TOTAL DEPARTMENT)
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Office's target timeframes
       size: full
       department: CODE
       datasource: code_customer_service
-      series-grouping: true
+      series-grouping: false
       series1-metric: Volume
       series1-type: column
       series1-format: number
@@ -15,7 +15,34 @@
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
-
+    - title: Property Maintenance Inspection Service Requests
+      description: Total customer-initiated property maintenance inspection service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+      size: half
+      department: CODE
+      datasource: code_pm
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Highly Hazardous Inspection Service Requests
+      description: Total customer-initiated highly hazardous inspection service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+      size: half
+      department: CODE
+      datasource: code_pm
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe	 	  
 - group-title: Section II - Inspection Volume
   group-description:
   charts:
