--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -1,12 +1,12 @@
-- group-title: Section I - Solid Waste Services
-  group-description:
+- group-title: Section I - Solid Waste Services Customer Service
+  group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes
   charts:
-    - title: Timeliness of Completion of Customer Service Requests
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+    - title: All Customer Service Requests (All Solid Waste)
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
       size: full
       department: DPW
       datasource: solid_waste_customer_service
-      series-grouping: true
+      series-grouping: false
       series1-metric: Volume
       series1-type: column
       series1-format: Number
@@ -15,8 +15,50 @@
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
-
-    - title: Pickups Collected on schedule
+    - title: Bin Delivery and Pickup Service Requests
+      description: Total customer-initiated bin delivery and pickup service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+      size: half
+      department: DPW
+      datasource: solid_waste_bin
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Illegal Dumping Service Requests
+      description: Total customer-initiated illegal dumping service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+      size: half
+      department: DPW
+      datasource: solid_waste_dumping
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Missed Collections Service Requests
+      description: Total customer-initiated missed collections service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+      size: full
+      department: DPW
+      datasource: solid_waste_missed_collections
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+- group-title: Section II - Solid Waste Operations
+    - title: Garbage, recycling and yard waste collected on schedule
       description: The percentage of garbage, recycling and yard wste pickups that are collected on schedule
       size: full
       department: DPW
@@ -27,15 +69,15 @@
       series1-format: percentage
       series1-label: Percent collected on schedule
 
-- group-title: Section II - Office of Transportation
-  group-description:
+- group-title: Section III - Office of Transportation Customer Service
+  group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
   charts:
-    - title: Timeliness of Completion of Customer Service Requests
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the Department's target timeframes
+    - title: All Customer Service Requests (All Solid Waste)
+      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
       size: full
       department: DPW
       datasource: transportation_customer_service
-      series-grouping: true
+      series-grouping: false
       series1-metric: Volume
       series1-type: column
       series1-format: Number
@@ -44,3 +86,101 @@
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+    - title: Asphalt and Street Repair Service Requests
+      description: Total customer-initiated asphalt and street repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_asphalt
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Concrete Repair Service Requests
+      description: Total customer-initiated concrete repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_concrete
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Street Sign Repair and Replace Service Requests
+      description: Total customer-initiated street sign repair and replace service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_signs
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Street Markings Service Requests
+      description: Total customer-initiated street markings service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_customer_markings
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Traffic Signal Repair Service Requests
+      description: Total customer-initiated traffic signal repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_customer_signals
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Street Light Repair Service Requests
+      description: Total customer-initiated street light repair service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: half
+      department: DPW
+      datasource: transportation_lights
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe
+    - title: Bridge Maintenance Service Requests
+      description: Total customer-initiated bridge maintenance service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
+      size: full
+      department: DPW
+      datasource: transportation_bridge
+      series-grouping: false
+      series1-metric: Volume
+      series1-type: column
+      series1-format: Number
+      series1-label: Total Service Requests
+      series2-metric: Result
+      series2-type: line
+      series2-format: percentage
+      series2-label: Resolved Within Target Timeframe	  
