--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -1,73 +1,76 @@
 - group-title: Section I - Solid Waste Services Customer Service
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS's target timeframes
   charts:
-    - title: All Customer Service Requests (All Solid Waste)
-      description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
-      size: full
-      department: DPW
-      datasource: solid_waste_customer_service
-      series-grouping: false
-      series1-metric: Volume
-      series1-type: column
-      series1-format: Number
-      series1-label: Total Service Requests
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Resolved Within Target Timeframe
-    - title: Bin Delivery and Pickup Service Requests
-      description: Total customer-initiated bin delivery and pickup service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
-      size: half
-      department: DPW
-      datasource: solid_waste_bin
-      series-grouping: false
-      series1-metric: Volume
-      series1-type: column
-      series1-format: Number
-      series1-label: Total Service Requests
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Resolved Within Target Timeframe
-    - title: Illegal Dumping Service Requests
-      description: Total customer-initiated illegal dumping service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
-      size: half
-      department: DPW
-      datasource: solid_waste_dumping
-      series-grouping: false
-      series1-metric: Volume
-      series1-type: column
-      series1-format: Number
-      series1-label: Total Service Requests
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Resolved Within Target Timeframe
-    - title: Missed Collections Service Requests
-      description: Total customer-initiated missed collections service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
-      size: full
-      department: DPW
-      datasource: solid_waste_missed_collections
-      series-grouping: false
-      series1-metric: Volume
-      series1-type: column
-      series1-format: Number
-      series1-label: Total Service Requests
-      series2-metric: Result
-      series2-type: line
-      series2-format: percentage
-      series2-label: Resolved Within Target Timeframe
+  - title: All Customer Service Requests (All Solid Waste)
+    description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    size: full
+    department: DPW
+    datasource: solid_waste_customer_service
+    series-grouping: false
+    series1-metric: Volume
+    series1-type: column
+    series1-format: Number
+    series1-label: Total Service Requests
+    series2-metric: Result
+    series2-type: line
+    series2-format: percentage
+    series2-label: Resolved Within Target Timeframe
+  - title: Bin Delivery and Pickup Service Requests
+    description: Total customer-initiated bin delivery and pickup service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    size: half
+    department: DPW
+    datasource: solid_waste_bin
+    series-grouping: false
+    series1-metric: Volume
+    series1-type: column
+    series1-format: Number
+    series1-label: Total Service Requests
+    series2-metric: Result
+    series2-type: line
+    series2-format: percentage
+    series2-label: Resolved Within Target Timeframe
+  - title: Illegal Dumping Service Requests
+    description: Total customer-initiated illegal dumping service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    size: half
+    department: DPW
+    datasource: solid_waste_dumping
+    series-grouping: false
+    series1-metric: Volume
+    series1-type: column
+    series1-format: Number
+    series1-label: Total Service Requests
+    series2-metric: Result
+    series2-type: line
+    series2-format: percentage
+    series2-label: Resolved Within Target Timeframe
+  - title: Missed Collections Service Requests
+    description: Total customer-initiated missed collections service requests and the percentage of those service requests that were resolved within the SWS' target timeframes
+    size: full
+    department: DPW
+    datasource: solid_waste_missed_collections
+    series-grouping: false
+    series1-metric: Volume
+    series1-type: column
+    series1-format: Number
+    series1-label: Total Service Requests
+    series2-metric: Result
+    series2-type: line
+    series2-format: percentage
+    series2-label: Resolved Within Target Timeframe
+
 - group-title: Section II - Solid Waste Operations
-    - title: Garbage, recycling and yard waste collected on schedule
-      description: The percentage of garbage, recycling and yard wste pickups that are collected on schedule
-      size: full
-      department: DPW
-      datasource: solid_waste_operations
-      series-grouping: true
-      series1-metric: Result
-      series1-type: line
-      series1-format: percentage
-      series1-label: Percent collected on schedule
+  group-description:
+  charts:
+  - title: Garbage, recycling and yard waste collected on schedule
+    description: The percentage of garbage, recycling and yard wste pickups that are collected on schedule
+    size: full
+    department: DPW
+    datasource: solid_waste_operations
+    series-grouping: true
+    series1-metric: Result
+    series1-type: line
+    series1-format: percentage
+    series1-label: Percent collected on schedule
 
 - group-title: Section III - Office of Transportation Customer Service
   group-description: Total customer-initiated service requests and the percentage of those service requests that were resolved within the OOT's target timeframes
@@ -183,4 +186,4 @@
       series2-metric: Result
       series2-type: line
       series2-format: percentage
-      series2-label: Resolved Within Target Timeframe	  
+      series2-label: Resolved Within Target Timeframe
