--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -1,8 +1,7 @@
 - group-title: Section I - Crime Reduction
   group-description:
   charts:
-    - title: Change in crime across City of Atlanta
-      description: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.<BR> <I>This data is published by the Federal Bureau of Investigation</I>
+    - title: Change in crime across City of Atlanta <BR> <small> Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.<BR> <I>This data is published by the Federal Bureau of Investigation</I></small>
       note: Scroll over results for more information
       size: full
       department: APD
