--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -1,7 +1,7 @@
 - group-title: Section I - Crime Reduction
   group-description:
   charts:
-    - title: Change in crime across City of Atlanta <BR> <small> Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.<BR> <I>This data is published by the Federal Bureau of Investigation</I></small>
+    - title: Change in crime across City of Atlanta <BR> <small> <b> Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta.</b><BR> <I>This data is published by the Federal Bureau of Investigation</I></small>
       description: <small> Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point. <small>
       size: full
       department: APD
