--- a/_data/atlanta-fire-rescue.yml
+++ b/_data/atlanta-fire-rescue.yml
@@ -2,7 +2,8 @@
   group-description:
   charts:
     - title: Total Fire Events and Response Effectiveness
-      description: Total number of fire events responded to by the Fire Rescue department and the percent of fire responses that met the Standards of Response Coverage (SORC) criteria, which are a combination of time to respond to an incidents and number of resources responding to an incident.
+      summary: Total number of fire events responded to by the Fire Rescue department (left) and the percent of fire responses that met the Standards of Response Coverage (SORC) criteria, which are a combination of time to respond to an incidents and number of resources responding to an incident (right). 
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note:
       size: full
       department: AFR
@@ -18,7 +19,8 @@
       series2-label: Responses Meeting SORC Criteria
 
     - title: Average Turnout Time Performance
-      description: Average time it took a dispatched Fire Rescue unit to leave the station once dispatched to a fire incident
+      summary: Average time it took a dispatched Fire Rescue unit to leave the station once dispatched to a fire incident
+      description: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note:
       size: full
       department: AFR
@@ -33,7 +35,8 @@
   group-description:
   charts:
     - title: Total EMS Events and Response Effectiveness
-      description: Total number of EMS events responded to by the Fire Rescue department and the percent of EMS responses that met the Standards of Response Coverage (SORC) criteria, which are a combination of time to respond to an incidents and number of resources responding to an incident.
+      summary: Total number of EMS events responded to by the Fire Rescue department (left) and the percent of EMS responses that met the Standards of Response Coverage (SORC) criteria, which are a combination of time to respond to an incidents and number of resources responding to an incident (right).
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note:
       size: full
       department: AFR
@@ -49,7 +52,8 @@
       series2-label: Responses Meeting SORC Criteria
 
     - title: Average Turnout Time Performance
-      description: Average time it took a dispatched Fire Rescue unit to leave the station once dispatched to an EMS incident
+      summary: Average time it took a dispatched Fire Rescue unit to leave the station once dispatched to an EMS incident
+      description: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note:
       size: full
       department: AFR
