--- a/_data/municipal-court.yml
+++ b/_data/municipal-court.yml
@@ -2,7 +2,8 @@
   group-description:
   charts:
     - title: Total Cases Filed and Case Disposal Efficiency
-      description: Total Number of Criminal cases filed in the Court and the percentage of cases disposed of within 10 days
+      summary: Total Number of Criminal cases filed in the Court (blue, left) and the percentage of cases disposed of within 10 days (red, right)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note: 
       size: full
       department: COURT
@@ -21,7 +22,8 @@
   group-description:
   charts:
     - title: Total Cases Filed and Case Disposal Efficiency
-      description: Total Number of Traffic cases filed in the Court and the percentage of cases disposed of within 10 days
+      summary: Total Number of Traffic cases filed in the Court (blue, left) and the percentage of cases disposed of within 10 days (red, right)
+      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       note: 
       size: full
       department: COURT
